hphp/test/slow/rx/invalid_attrs1.hhas.expectf
Fatal error: Assembler Error: line 6: multiple rx attributes in %s/test/slow/rx/invalid_attrs1.hhas on line -1
